--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,9 +16,7 @@
       "sourceType": "module"
     },
     "plugins": [
-      "react",
-      "@typescript-eslint",
-      "react-hooks"
+      "react","@typescript-eslint","react-hooks","prettier"
     ],
     "rules": {
       "react-hooks/rules-of-hooks": "error",
