--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,11 @@
     "editor.formatOnSave": false,
     "editor.codeActionsOnSave": {
       "source.fixAll.eslint": true
-    }
+    },
+    "cSpell.words": [
+      "Cabecalho",
+      "EBAC",
+      "Estilos",
+      "Vagaz"
+    ]
   }
